hw3/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.io.*;
import java.util.*;
import ast.*;

public class Parser implements ParserConstants {
  public static void main(String [] args) {
    if (args.length < 1) {
      System.out.println("Need a file name as command-line argument.");
      return;
    }
    try {
      FileReader input = new FileReader(args[0]);
      Ast.Program p = new Parser(input).Program();
      input.close();
      System.out.print(p);
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//
// Helper function
  static final public Ast.Id Id() throws ParseException {
  Token tkn;
    tkn = jj_consume_token(ID);
             {if (true) return new Ast.Id(tkn.image);}
    throw new Error("Missing return statement in function");
  }

// Program -> {ClassDecl}
//
  static final public Ast.Program Program() throws ParseException {
  List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
  Ast.ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                     cl.add(c);
    }
    jj_consume_token(0);
      {if (true) return new Ast.Program(cl);}
    throw new Error("Missing return statement in function");
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {"public" MethodDecl} "}"
//
  static final public Ast.ClassDecl ClassDecl() throws ParseException {
    List<Ast.VarDecl> vl = new ArrayList<Ast.VarDecl>();
    List<Ast.MethodDecl> ml = new ArrayList<Ast.MethodDecl>();
    Ast.VarDecl v;
    Ast.MethodDecl m;
    Ast.Id id, pid = null;
    jj_consume_token(6);
    id = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      pid = Id();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(54);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDecl();
                          vl.add(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(9);
      m = MethodDecl();
                                  ml.add(m);
    }
    jj_consume_token(55);
     {if (true) return new Ast.ClassDecl(id.nm,pid==null?null:pid.nm,vl,ml);}
    throw new Error("Missing return statement in function");
  }

// MethodDecl -> ExtType <ID> "(" [Param {"," Param}] ")" 
//                 "{" {VarDecl} {Stmt} "}"
//            |  "static" "void" "main" "(" "String" "[" "]" <ID> ")"
//                 "{" {VarDecl} {Stmt} "}" 
// 
  static final public Ast.MethodDecl MethodDecl() throws ParseException {
    Ast.Type rt;
    Ast.Id id=null;
    List<Ast.Param> pl = new ArrayList<Ast.Param>();
    Ast.Param p;
    List<Ast.VarDecl> vl = new ArrayList<Ast.VarDecl>();
    Ast.VarDecl v;
    List<Ast.Stmt> sl = new ArrayList<Ast.Stmt>();
    Ast.Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
    case 13:
    case 14:
    case ID:
      rt = ExtType();
      id = Id();
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        p = Param();
                                        pl.add(p);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 48:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(48);
          p = Param();
                                                                    pl.add(p);
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(54);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        v = VarDecl();
                                         vl.add(v);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        s = Stmt();
                                                                   sl.add(s);
      }
      jj_consume_token(55);
    {if (true) return new Ast.MethodDecl(rt,id.toString(),pl,vl,sl);}
      break;
    case 8:
      jj_consume_token(8);
      jj_consume_token(11);
      jj_consume_token(10);
      jj_consume_token(50);
      jj_consume_token(15);
      jj_consume_token(52);
      jj_consume_token(53);
      id = Id();
               if (id !=null && !id.nm.equals("ignore"))
               {
                   p=new Ast.Param(new Ast.ArrayType(new Ast.ObjType("String")),id.toString());
                   pl.add(p);
               }
      jj_consume_token(51);
      jj_consume_token(54);
      label_7:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_7;
        }
        v = VarDecl();
                                          vl.add(v);
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        s = Stmt();
                                                                    sl.add(s);
      }
      jj_consume_token(55);
    {if (true) return new Ast.MethodDecl(null,"main",pl,vl,sl);}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Param -> Type <ID> 
//
  static final public Ast.Param Param() throws ParseException {
  Ast.Type t;
  Ast.Id id;
    t = Type();
    id = Id();
    {if (true) return new Ast.Param(t,id.toString());}
    throw new Error("Missing return statement in function");
  }

// VarDecl -> Type <ID> ["=" Expr] ";"

//  
  static final public Ast.VarDecl VarDecl() throws ParseException {
    Ast.Type t;
    Ast.Id id;
    Ast.Exp exp=null;
    t = Type();
    id = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      exp = Expr();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(47);
    {if (true) return new Ast.VarDecl(t,id.toString(),exp);}
    throw new Error("Missing return statement in function");
  }

// ExtType -> Type | "void"
//
  static final public Ast.Type ExtType() throws ParseException {
    Ast.Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
    case ID:
      t = Type();
               {if (true) return t;}
      break;
    case 11:
      jj_consume_token(11);
             {if (true) return null;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Type -> BasicType [ "[" "]" ]
//      |  <ID>
//
  static final public Ast.Type Type() throws ParseException {
    Ast.Type t;
    Ast.Id id;
    boolean helper=false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      t = BasicType();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        jj_consume_token(53);
                          helper=true;
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      if (helper)
          {if (true) return new Ast.ArrayType(t);}
      else
          {if (true) return t;}
      break;
    case ID:
      id = Id();
            {if (true) return new Ast.ObjType(id.toString());}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// BasicType -> "int" | "double" | "boolean"
//
  static final public Ast.Type BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
         {if (true) return new Ast.IntType();}
      break;
    case 14:
      jj_consume_token(14);
             {if (true) return new Ast.DblType();}
      break;
    case 12:
      jj_consume_token(12);
              {if (true) return new Ast.BoolType();}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Stmt -> "{" {Stmt} "}"
//      |  ExtId ( ["[" Expr() "]"] "=" Expr()  
//               | "(" [Args()] ")" ) ";"  
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrArg] ")" ";"
//      |  "return" [Expr] ";"
//
  static final public Ast.Stmt Stmt() throws ParseException {
   List<Ast.Stmt> sl = new ArrayList<Ast.Stmt>();
   Ast.Exp field;
   Ast.Stmt s;
   Ast.Stmt s1=null; //else clause statement
   List<Ast.Exp> args = new ArrayList<Ast.Exp>();
   Ast.Exp e=null,e1=null,e2=null;
   Ast.Exp print=null;
   Ast.Exp ret=null;
   boolean helper=false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        s = Stmt();
                 sl.add(s);
      }
      jj_consume_token(55);
                                     {if (true) return new Ast.Block(sl);}
      break;
    case 19:
    case ID:
      field = ExtId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 46:
      case 52:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 52:
          jj_consume_token(52);
          e1 = Expr();
          jj_consume_token(53);
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        jj_consume_token(46);
        e2 = Expr();
        jj_consume_token(47);
                 // form of Id() "=" Expr() ";"
                 if(e1==null)
                 {
                     {if (true) return new Ast.Assign(field,e2);}
                 }
                 //form of Id() [ Expr() ] "=" Expr() ";"
                 else
                 {
                     {if (true) return new Ast.Assign(new Ast.ArrayElm(field,e1),e2);}
                 }
        break;
      case 50:
        jj_consume_token(50);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
        case 17:
        case 18:
        case 19:
        case INTLIT:
        case DBLLIT:
        case ID:
        case 34:
        case 39:
        case 50:
          args = Args();
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        jj_consume_token(51);
        jj_consume_token(47);
               //form of Id() "(" Args() ")" ";"
               if (field instanceof Ast.Field)
                   {if (true) return new
                   Ast.CallStmt(((Ast.Field)field).obj,((Ast.Field)field).nm,args);}
               else if (field instanceof Ast.Id)
                   {if (true) return new Ast.CallStmt(new Ast.This(),field.toString(),args);}
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 20:
      jj_consume_token(20);
      jj_consume_token(50);
      e = Expr();
      jj_consume_token(51);
      s = Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
        jj_consume_token(21);
        s1 = Stmt();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
                                                     {if (true) return new Ast.If(e,s,s1);}
      break;
    case 22:
      jj_consume_token(22);
      jj_consume_token(50);
      e = Expr();
      jj_consume_token(51);
      s = Stmt();
                                     {if (true) return new Ast.While(e,s);}
      break;
    case 24:
      jj_consume_token(24);
      jj_consume_token(49);
      jj_consume_token(25);
      jj_consume_token(49);
      jj_consume_token(26);
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case STRLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        print = PrArg();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(47);
       {if (true) return new Ast.Print(print);}
      break;
    case 23:
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        ret = Expr();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(47);
                             {if (true) return new Ast.Return(ret);}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//ExtId -> ["this" "." ] <ID> {"."  <ID> }
  static final public Ast.Exp ExtId() throws ParseException {
    Ast.Id id1,id2=null;
    Ast.Exp field=null,field2=null;
    boolean setThis = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
      jj_consume_token(49);
                setThis=true;
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    id1 = Id();
        if (setThis)
           field=new Ast.Field(new Ast.This(),id1.toString());
    label_10:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(49);
      field2 = ExtId();
            if (field !=null)
                field=new Ast.Field(field,field2.toString());
            else
                field=new Ast.Field(id1,field2.toString());
    }
        if (field != null)
            {if (true) return field;}
        else
            {if (true) return id1;}
    throw new Error("Missing return statement in function");
  }

/*
//ExprOrAssign -> "(" [Args] ")" ";"
//              | [ "[" Expr() "]" ] "=" Expr() ";"
Ast.Exp ExprOrAssign():{}
{
    "(" [Args()] ")" ";"
  | [ "[" Expr() "]" ] "=" Expr() ";"
}
*/

// Args -> Expr {"," Expr}
//
  static final public List<Ast.Exp> Args() throws ParseException {
    List<Ast.Exp> exps = new ArrayList<Ast.Exp>();
    Ast.Exp exp;
    exp = Expr();
             exps.add(exp);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 48:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_11;
      }
      jj_consume_token(48);
      exp = Expr();
                                             exps.add(exp);
    }
      {if (true) return exps;}
    throw new Error("Missing return statement in function");
  }

// PrArg -> Expr | <STRLIT>
//
  static final public Ast.Exp PrArg() throws ParseException {
    Ast.Exp e;
    Token tkn;
    String s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
    case 18:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 34:
    case 39:
    case 50:
      e = Expr();
            {if (true) return e;}
      break;
    case STRLIT:
      tkn = jj_consume_token(STRLIT);
                s = tkn.image.substring(1);s=s.substring(0,s.length()-1);{if (true) return new Ast.StrLit(s);}
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// ExprNew -> BasicType "[" <INTLIT> "]"
//          | <ID> "(" ")"
  static final public Ast.Exp ExprNew() throws ParseException {
    Ast.Type t;
    Token tkn;
    Ast.Id id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      t = BasicType();
      jj_consume_token(52);
      tkn = jj_consume_token(INTLIT);
      jj_consume_token(53);
                                        {if (true) return new Ast.NewArray(t,Integer.parseInt(tkn.image));}
      break;
    case ID:
      id = Id();
      jj_consume_token(50);
      jj_consume_token(51);
                     {if (true) return new Ast.NewObj(id.nm);}
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Expr -> AndRule {"||" AndRule}
  static final public Ast.Exp Expr() throws ParseException {
    Ast.Exp e1,e2;
    e1 = AndRule();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_12;
      }
      jj_consume_token(38);
      e2 = AndRule();
                                     e1=new Ast.Binop(Ast.BOP.OR,e1,e2);
    }
        {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }
